--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-   
-    strategy:
-      # Node versions list
-      matrix:
-        node-version: [14.x]
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@v2
@@ -28,9 +24,11 @@ jobs:
         # Install and build project
       run: |
         make install
-   
+    # Runs a single command using the runners shell
+    - name: Run a one-line script
+      run: echo Hello, world!
+        
     - name: Run linter
         # Run Linter
       run: |
         make lint
-
