--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,46 @@
-# This is a basic workflow to help you get started with Actions
+# Name of workflow
+name: Node CI
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-
+# Trigger the workflow on push or pull request
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  - push
+  - pull_request
 
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+
+    # The type of machine to run the job on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      # Node versions list
+      matrix:
+        node-version: [13.x]
+
     steps:
-    - uses: actions/checkout@v2
-      
-    - name: npm install, build
+      # Check-out repository under GitHub workspace
+      # https://github.com/actions/checkout
+      - uses: actions/checkout@v2
+        # Step's name
+      - name: Use Node.js ${{ matrix.node-version }}
+        # Configures the node version used on GitHub-hosted runners
+        # https://github.com/actions/setup-node
+        uses: actions/setup-node@v1
+        # The Node.js version to configure
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: npm install, build
         # Install and build project
-      run: |
-        make install
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-        
-    - name: Run linter
-        # Run Linter
-      run: |
-        make lint
+        run: |
+          make install
+          make build
+        # Add environment variables
+        env:
+          CI: true
+
+      - name: Run linter
+        run: make lint
+
+      - name: Run tests
+        run: make test
