--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "@hexlet/code",
-  "main": "src/index.js",
   "version": "1.0.0",
   "description": "front-end project#3",
-  "bin": {
-    "rss": "bin/rss.js"
-  },
   "scripts": {
-    "test": "jest --colors"
+    "test": "jest --colors",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -23,6 +20,7 @@
     "testEnvironment": "node",
     "transform": {}
   },
+  "main": "src/init.js",
   "homepage": "https://github.com/Iryna87/frontend-project-lvl3#readme",
   "dependencies": {
     "lodash": "^4.17.21"
@@ -33,7 +31,11 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.5",
+    "html-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
-    "jest-cli": "^26.6.3"
+    "jest-cli": "^26.6.3",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
