--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
   },
   "devDependencies": {
     "@jest/globals": "^26.6.2",
+    "bootstrap-alerts": "^1.2.2",
+    "bootstrap-grid": "^3.0.1",
+    "bootstrap-utilities": "^4.1.3",
+    "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -35,6 +39,8 @@
     "html-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
+    "style-loader": "^2.0.0",
+    "vercel": "^21.3.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
