--- a/package.json
+++ b/package.json
@@ -24,13 +24,11 @@
   "main": "src/init.js",
   "homepage": "https://github.com/Iryna87/frontend-project-lvl3#readme",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@jest/globals": "^26.6.2",
-    "bootstrap-alerts": "^1.2.2",
-    "bootstrap-grid": "^3.0.1",
-    "bootstrap-utilities": "^4.1.3",
     "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -39,6 +37,8 @@
     "html-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "style-loader": "^2.0.0",
     "vercel": "^21.3.2",
     "webpack": "^5.24.2",
