--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^26.6.2",
+    "@popperjs/core": "^2.9.1",
     "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -37,8 +38,6 @@
     "html-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
     "style-loader": "^2.0.0",
     "vercel": "^21.3.2",
     "webpack": "^5.24.2",
