--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
   },
   "type": "module",
   "jest": {
-    "testEnvironment": "node",
+    "testEnvironment": "jsdom",
     "transform": {}
   },
   "main": "src/init.js",
   "homepage": "https://github.com/Iryna87/frontend-project-lvl3#readme",
   "dependencies": {
-    "bootstrap": "^4.6.0",
+    "@popperjs/core": "^2.9.1",
+    "bootstrap": "^5.0.0-beta2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@jest/globals": "^26.6.2",
-    "@popperjs/core": "^2.9.1",
     "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
