--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "html-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "style-loader": "^2.0.0",
     "vercel": "^21.3.2",
     "webpack": "^5.24.2",
