--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.1",
     "bootstrap": "^5.0.0-beta2",
+    "dom-parser": "^0.1.6",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
