--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
     "html-webpack-plugin": "^5.2.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
