--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@jest/globals": "^26.6.2",
     "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.2",
     "html-webpack-plugin": "^5.2.0",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "style-loader": "^2.0.0",
